--- a/Assets/Scripts/Arcade.asmdef
+++ b/Assets/Scripts/Arcade.asmdef
@@ -1,14 +1,16 @@
 {
     "name": "Arcade",
     "references": [
-        "Demigiant.DOTween"
+        "Demigiant.DOTween",
+        "SimpleFileBrowser.Runtime"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
