25% speed pitch issue

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ sysinfo.txt
 crashlytics-build.properties
 # above comes from https://github.com/github/gitignore/blob/master/Unity.gitignore
 
+*.zip
+
 .vscode
 # these folder is used when testting or debugging the project
 /Background
