--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,12 +4,14 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.analytics": "3.3.5",
     "com.unity.assetbundlebrowser": "1.7.0",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.0",
-    "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.inputsystem": "1.0.0",
+    "com.unity.test-framework": "1.1.16",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "7.1.8",
+    "com.unity.visualeffectgraph": "8.2.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
