Migrate to new Unity Input System

--- a/Assets/Scripts/Arcade.asmdef
+++ b/Assets/Scripts/Arcade.asmdef
@@ -1,8 +1,10 @@
 {
     "name": "Arcade",
+    "rootNamespace": "",
     "references": [
         "Demigiant.DOTween",
-        "SFB.Runtime"
+        "SFB.Runtime",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
