Load external obj file from skin

--- a/Assets/Scripts/Arcade.asmdef
+++ b/Assets/Scripts/Arcade.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Demigiant.DOTween",
         "SFB.Runtime",
-        "Unity.InputSystem"
+        "Unity.InputSystem",
+        "OBJImport"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
