--- a/Assets/Scripts/Arcade.asmdef
+++ b/Assets/Scripts/Arcade.asmdef
@@ -7,7 +7,8 @@
         "Unity.InputSystem",
         "OBJImport",
         "Unity.RenderPipelines.Core.Runtime",
-        "Unity.RenderPipelines.Universal.Runtime"
+        "Unity.RenderPipelines.Universal.Runtime",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
