--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
+    "com.cysharp.unitask": "2.5.4",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.analytics": "3.8.1",
     "com.unity.assetbundlebrowser": "1.7.0",
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.20",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.6.3",
     "com.unity.render-pipelines.universal": "15.0.6",
-    "com.unity.test-framework": "1.3.8",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.5",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "15.0.6",
     "com.unity.modules.ai": "1.0.0",
@@ -42,8 +43,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.cysharp.unitask": "2.3.3"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
