--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,12 +7,13 @@
     "com.unity.assetbundlebrowser": "1.7.0",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.6.3",
-    "com.unity.render-pipelines.universal": "15.0.6",
-    "com.unity.test-framework": "1.3.9",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualeffectgraph": "15.0.6",
+    "com.unity.inputsystem": "1.8.2",
+    "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.test-framework": "1.4.4",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualeffectgraph": "17.0.3",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
