--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "com.cysharp.unitask": "2.5.4",
+    "com.cysharp.unitask": "2.5.5",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.analytics": "3.8.1",
     "com.unity.assetbundlebrowser": "1.7.0",
-    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.8.2",
+    "com.unity.inputsystem": "1.10.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "17.0.3",
-    "com.unity.test-framework": "1.4.4",
+    "com.unity.test-framework": "1.4.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
